--- a/Square_Solver.EXMPL/MainWindow.xaml
+++ b/Square_Solver.EXMPL/MainWindow.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         ResizeMode="NoResize"
         WindowStyle="ToolWindow"
-        Title="MainWindow" Height="500" Width="800">
+        Title="Square solver" Height="500" Width="800">
     <Grid Height="450" Width="800">
         <Label FontSize="25" HorizontalAlignment="Center" Margin="0,0,0,400"> РЕШАТЕЛЬ КВАДРАТНЫХ УРАВНЕНИЙ: </Label>
         <Label FontSize="25" HorizontalAlignment="Center" Margin="-100,30,500,380"> УРАВНЕНИЕ: </Label>
@@ -40,19 +40,19 @@
             </Grid>
             <Grid x:Name="FirstValue" Margin="250,0,0,0">
                 <Label FontSize="25" Margin="50,0,0,0"> = </Label>
-                <Label FontSize="25" Margin="300,0,0,0"> = </Label>
-                <Label x:Name="Answer1" FontSize="25" Margin="350,0,0,0"> 12.2 </Label>
-                <Label x:Name="FirstUpperAnswer" FontSize="20" Margin="100,-20,0,0"> -b - √(b^2 - 4ac)</Label>
-                <Label x:Name="FirstDownerAnswer" FontSize="20" Margin="160,20,0,0"> 2а</Label>
-                <Canvas Background="Black" Margin="100,18,270,190"></Canvas>
+                <Label FontSize="25" Margin="200,0,0,0"> = </Label>
+                <Label x:Name="Answer1" FontSize="25" Margin="250,0,0,0"> 12.2 </Label>
+                <Label x:Name="FirstUpperAnswer" FontSize="20" Margin="100,-20,0,0"> -3 - (4)</Label>
+                <Label x:Name="FirstDownerAnswer" FontSize="20" Margin="120,20,0,0">2а</Label>
+                <Canvas Background="Black" Margin="100,18,370,190"></Canvas>
             </Grid>
             <Grid x:Name="SecondValue" Margin="250,100,0,0">
                 <Label FontSize="25" Margin="50,0,0,0"> = </Label>
-                <Label FontSize="25" Margin="300,0,0,0"> = </Label>
-                <Label x:Name="Answer2" FontSize="25" Margin="350,0,0,0"> 12.2 </Label>
-                <Label x:Name="SecondUpperAnswer" FontSize="20" Margin="100,-20,0,0"> -b + √(b^2 - 4ac)</Label>
-                <Label x:Name="SecondDownerAnswer" FontSize="20" Margin="160,20,0,0"> 2а</Label>
-                <Canvas Background="Black" Margin="100,18,270,90"></Canvas>
+                <Label FontSize="25" Margin="200,0,0,0"> = </Label>
+                <Label x:Name="Answer2" FontSize="25" Margin="250,0,0,0"> 12.2 </Label>
+                <Label x:Name="SecondUpperAnswer" FontSize="20" Margin="100,-20,0,0"> -3 - (4)</Label>
+                <Label x:Name="SecondDownerAnswer" FontSize="20" Margin="120,20,0,0">2а</Label>
+                <Canvas Background="Black" Margin="100,18,370,90"></Canvas>
             </Grid>
         </Grid>
         <Button Height="25" Width="100" Margin="650,380,0,0" Click="Calculate"> ВЫЧИСЛИТЬ! </Button>
